# burst_search_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py  index.rst
docs/examples/: example.ipynb  search_example.md  search_example.py  tmp.py
example_submission/: sample.ipynb
src/burst_search_pipeline/: __init__.py  glitch.py  lvk_interferometers.py  plotting.py  psd.py  snr.py  training_data.py  waveform_generator.py
src/burst_search_pipeline/search/: model.py
studies/: pycbc_starccato_interface.py
tests/: conftest.py  test_injection.py  test_qtransform.py
tests/test_data/: time_domain_strain.txt
