[tool.poetry]
name = "burst_search_pipeline"
version = "0.0.1"
description = "Burst search pipeline"
authors = ["NZ-Gravity <your.email@example.com>"]
license = "MIT"  # or another license of your choice
readme = "README.md"  # Optional, path to your README file
packages = [{ include = "burst_search_pipeline", from = "src" }]  # Specify your package directory


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Add your project dependencies here, e.g.:
starccato = "^0.0.2"
bilby = "^2.3.0"
astropy = "^6.1.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"  # Your existing request
sphinx = "^4.0"
sphinx-book-theme= "^1.0"
nbsphinx = "^0.8.7"  # To include Jupyter Notebooks
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]  # Specify the directory containing your tests


[tool.black]
line-length = 88  # Optional: configure Black formatter settings

[tool.flake8]
max-line-length = 88  # Optional: configure Flake8 settings

[tool.isort]
profile = "black"  # Optional: configure isort settings